<resources>
    <string name="app_name">Music Player</string>
    <string name="shuffle_btn">Shuffle</string>
    <string name="fvrt_btn">Favourites</string>
    <string name="playlist_btn">Playlist</string>
    <string name="total_songs">Total Songs :</string>

    <string name="world_of_music">World Of Music</string>
    <string name="song_name">Song Name</string>
    <string name="back_btn">Back</string>
    <string name="start_tv">00:00</string>
    <string name="end_tv">Loading...</string>

    /////////////////////////chhama/////////////////////
    <string name="all_media">Media</string>
    <string name="all_folders">Folders</string>

    ////////////////////chhama//////////////////////
    <string name="video_name">Video Name</string>
    <string name="folder_name">Folder Name</string>
    <string name="duration">00.00</string>
   
    /////////////////////////chhama////////////////////
    <string name="loading">Loading..</string>
    <string name="semi_colon">:</string>
    ///////////////////chhama////////////////////
    <string name="lock">Lock Icon</string>
    <string name="back_button">Back Button</string> ////////////////backbutton used in video/////////
    <string name="menu">Menu</string>
    <string name="repeat_btn">Repeat Button</string>
    <string name="fullscreen_btn">Fullscreen Button</string>
    <string name="pree_btn">Previouss Button</string>
    <string name="nexx_btn">Nextt Button</string>



    <string name="song_album">Song Album</string>
    <string name="delete_folder">Delete</string>
    <string name="name_folders">Folders Name</string>
    <string name="video">Videos</string>
    <string name="audio_name">Audios</string>
    <string name="add_folder">Add Folder</string>
    <string name="media_name">Media</string>
    <string name="folder">Folders</string>

    <string name="image">Image</string>
    <string name="ur_name">Your Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>