<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayerActivityV">

    <com.google.android.exoplayer2.ui.PlayerView
        android:id="@+id/playerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:controller_layout_id="@layout/custom_control_view"
        app:use_controller="true">

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/back_btn"
            android:src="@drawable/lock_open_icon"
            app:tint="@color/white" />
    </com.google.android.exoplayer2.ui.PlayerView>
    <LinearLayout
        android:id="@+id/topController"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal"
        android:background="#42000000">

        <ImageButton
            android:id="@+id/backBtnPA"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/back_icon"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/back_btn"
            app:tint="@color/white" />
        <TextView
            android:id="@+id/videoTittle"
            android:layout_width="8dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/video_name"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:singleLine="true"
            android:marqueeRepeatLimit="marquee_forever"
            android:ellipsize="marquee"
            android:textStyle="bold"/>

    </LinearLayout>

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/lock"
        android:src="@drawable/lock_open_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/white"
        tools:ignore="MissingConstraints" />
    <ImageButton
        android:id="@+id/playpauseBtnPA"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/playlist_btn"
        android:src="@drawable/play_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white"
       android:clickable="true"
        android:focusable="true"
        android:background="?android:selectableItemBackground"/>



    <LinearLayout
        android:id="@+id/bottomController"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal"
        android:background="#42000000"
        android:gravity="end|bottom">

        <ImageButton
            android:id="@+id/exo_repeat_toggle"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/repeat_btn"
            android:src="@drawable/exo_icon_repeat_off"
            app:tint="@color/white" />


        <ImageButton
            android:id="@+id/previousBtnPA"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/pre_icon"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/pree_btn"
            app:tint="@color/white" />
        <ImageButton
            android:id="@+id/nextBtnPA"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/nex_icon"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/nexx_btn"
            app:tint="@color/white" />

        <ImageButton
            android:id="@+id/exo_fullscreen"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/fullscreen_btn"
            android:src="@drawable/exo_icon_fullscreen_enter"
            app:tint="@color/white"/>



    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>