<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

  <androidx.appcompat.widget.LinearLayoutCompat
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical">


      <FrameLayout
          android:id="@+id/fragmentFL"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:orientation="vertical">

          <com.google.android.material.bottomnavigation.BottomNavigationView
              android:id="@+id/bottomNav"
              android:layout_width="wrap_content"
              android:layout_height="match_parent"
              android:layout_weight="1"
              android:text="@string/shuffle_btn"
              android:textColor="@color/black"
              android:textAllCaps="false"
              android:drawableTop="@drawable/shuffle_icon"
              android:contentDescription="@string/shuffle_btn"
              style="@style/Widget.AppCompat.Button.Borderless"/>

          <Button
              android:id="@+id/favrt_btn"
              android:layout_width="wrap_content"
              android:layout_height="match_parent"
              android:layout_weight="1"
              android:text="@string/fvrt_btn"
              android:textColor="@color/black"
              android:textAllCaps="false"
              android:drawableTop="@drawable/favorite_icon"
              android:contentDescription="@string/fvrt_btn"
              style="@style/Widget.AppCompat.Button.Borderless"/>
          <Button
              android:id="@+id/playlist_btn"
              android:layout_width="wrap_content"
              android:layout_height="match_parent"
              android:layout_weight="1"
              android:text="@string/playlist_btn"
              android:textColor="@color/black"
              android:textAllCaps="false"
              android:drawableTop="@drawable/playlist_icon"
              android:contentDescription="@string/playlist_btn"
              style="@style/Widget.AppCompat.Button.Borderless"/>

      </FrameLayout>

      <TextView
          android:id="@+id/totalSongs"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textColor="@color/black"
          android:text="@string/total_songs"
          android:layout_margin="10dp"/>

      <androidx.recyclerview.widget.RecyclerView
          android:id="@+id/mediaRV"
          android:layout_width="match_parent"
          android:layout_height="match_parent"

          />

  </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>