<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayerActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="1">

       <ImageButton

           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginStart="5dp"
           android:src="@drawable/back_icon"
           android:tint="@color/black"
           android:contentDescription="@string/back_btn"
           android:background="@android:color/transparent"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:text="@string/world_of_music"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:layout_weight="1"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:background="@android:color/transparent"
            android:src="@drawable/favborder_icon"
            android:contentDescription="@string/fvrt_btn"
            android:tint="@android:color/holo_red_dark" />


    </LinearLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/songImgPA"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:src="@drawable/musicplayericon"
        app:shapeAppearance="@style/curved"
        app:strokeColor="@color/purple_200"
        />

    <!-- cureent song name-->
    <TextView
        android:id="@+id/songNamePA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/song_name"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:layout_weight="1"


        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:gravity="center"
        android:layout_weight="1">

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/previousBtnPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        app:icon="@drawable/previous_icon"
            app:iconSize="40dp"
            android:layout_marginHorizontal="25dp"/>


        <!--- pause button-->
        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/playpauseBtnPA"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:icon="@drawable/pause_icon"
            app:iconSize="50dp"
            android:layout_marginHorizontal="25dp"
            app:shapeAppearanceOverlay="@style/curved"
            android:backgroundTint="@android:color/holo_red_light"/>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/nextBtnPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/next_icon"
            app:iconSize="40dp"
            android:layout_marginHorizontal="25dp"/>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:orientation="horizontal"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:text="@string/start_tv" />

        <androidx.appcompat.widget.AppCompatSeekBar
            android:layout_width="0dp"
            android:layout_gravity="center"
            android:layout_height="match_parent"
            android:layout_weight="1"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="15sp"
            android:text="@string/end_tv" />


    </LinearLayout>

</LinearLayout>